--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,7 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?rxfyudjm#1" target="_blank">首页</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/1?bihff" target="_blank">动态网</a> | <a href="https://d3myewunzonann.cloudfront.net/2?xlwfuwpev" target="_blank">大纪元</a> | <a href="https://dgk92ykceobaf.cloudfront.net/4?fpcrptstb" target="_blank">看中国</a> | <a href="https://d3l8osd9w9ntl9.cloudfront.net/pHh5q?achqjygtr" target="_blank">新生网</a> | <a href="https://d2cdd2sap6vl0o.cloudfront.net/tktpt?iwmaf" target="_blank">阿波罗网</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/Mjpvu?qkazlha" target="_blank">干净世界</a> | <a href="https://dl1ez95kskssm.cloudfront.net/10?jtmqguy" target="_blank">退党服务</a> | <a href="https://d3abchfok6e2j.cloudfront.net/Rffqf?kuvkits" target="_blank">明慧广播</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/nw9Vn?yfkdlolp" target="_blank">传奇时代</a> | <a href="https://dtjix0ckmebpi.cloudfront.net/AF9AG?ecnulr" target="_blank">新境界影视</a> | <a href="https://d1kgsi70b35buf.cloudfront.net/zqMQA?fwstbhpox" target="_blank">文昭谈论</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/7?kblxgzgv" target="_blank">明慧</a></p><p><a href="https://d1nm4aa0eu3bxh.cloudfront.net/9?vekvcy" target="_blank">大法</a> | <a href="https://d3uam2jhpjrvu5.cloudfront.net/3?pshgyg" target="_blank">新唐人</a> | <a href="https://d1nm4aa0eu3bxh.cloudfront.net/obAhT?hznlbcirv" target="_blank">人民报</a> | <a href="https://dervszfjn9udk.cloudfront.net/xXNHu?szkduor" target="_blank">放光明</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/5?gnfuqhrdm" target="_blank">新纪元</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/6?gedutfq" target="_blank">希望之声</a> | <a href="https://d324e5bfxb7dri.cloudfront.net/11?apgitjk" target="_blank">无界网络</a> | <a href="https://d3asbsenpgs1fq.cloudfront.net/Pueji?wfcryv" target="_blank">追查国际</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/16?euryh" target="_blank">明慧之窗</a> | <a href="https://doyvntponycdh.cloudfront.net/LdvzZ?blzseks" target="_blank">细语人生</a> | <a href="https://d3siwajeg0khti.cloudfront.net/fBn3r?sevhgvv" target="_blank">新世纪影视</a> | <a href="https://d12gl57lrewmhb.cloudfront.net/PUWMb?yyutti" target="_blank">江峰时刻</a> | <a href="https://dlp02mn13eakq.cloudfront.net/8?hochbw" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309817.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309818-GettyImages-2158701398-320x200.jpg"><p align="center">中共发18卫星挑战星链 专家：存在技术障碍</p></a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309817.md#1" title="中共发18卫星挑战星链 专家：存在技术障碍""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309818-GettyImages-2158701398-320x200.jpg">&nbsp;</a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?xzayslgfp#1" target="_blank">首页</a> | <a href="https://d124e4v75n9sum.cloudfront.net/1?xvdbd" target="_blank">动态网</a> | <a href="https://dycg1eql8aigr.cloudfront.net/2?zpudwxbo" target="_blank">大纪元</a> | <a href="https://d2iiqnrx4rrboe.cloudfront.net/4?alnmjub" target="_blank">看中国</a> | <a href="https://d2aqxvnyguf0uq.cloudfront.net/pHh5q?yudrtdq" target="_blank">新生网</a> | <a href="https://do0q2uqs2ncwe.cloudfront.net/tktpt?ltnqbkyx" target="_blank">阿波罗网</a> | <a href="https://d3bo5docy69ast.cloudfront.net/Mjpvu?jxvts" target="_blank">干净世界</a> | <a href="https://d2bd0i85jg8bcc.cloudfront.net/10?lnxmyahf" target="_blank">退党服务</a> | <a href="https://d2p23c289x62lr.cloudfront.net/Rffqf?qygfjx" target="_blank">明慧广播</a> | <a href="https://d2torrlf4djx10.cloudfront.net/nw9Vn?tlrbllme" target="_blank">传奇时代</a> | <a href="https://d1t2us6hq0fx1u.cloudfront.net/AF9AG?qbcic" target="_blank">新境界影视</a> | <a href="https://dme0bxbvomkno.cloudfront.net/zqMQA?icohnqb" target="_blank">文昭谈论</a> | <a href="https://d2frcdcjb0c6wq.cloudfront.net/7?mvcemqmr" target="_blank">明慧</a></p><p><a href="https://d2bd0i85jg8bcc.cloudfront.net/9?hknnpizn" target="_blank">大法</a> | <a href="https://d37g5boc7rm625.cloudfront.net/3?ktdckl" target="_blank">新唐人</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/obAhT?ybmus" target="_blank">人民报</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/xXNHu?ikzpcdo" target="_blank">放光明</a> | <a href="https://d1ucfc2ix2o07u.cloudfront.net/5?edshq" target="_blank">新纪元</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/6?zdvlokkp" target="_blank">希望之声</a> | <a href="https://d10efcw5kfoez9.cloudfront.net/11?wpnurv" target="_blank">无界网络</a> | <a href="https://d337p4rc38c0de.cloudfront.net/Pueji?jvexo" target="_blank">追查国际</a> | <a href="https://d2r9hn1obbkp2q.cloudfront.net/16?mmalytm" target="_blank">明慧之窗</a> | <a href="https://d2b68ib2p4x8t6.cloudfront.net/LdvzZ?ztlwgswzy" target="_blank">细语人生</a> | <a href="https://dqcg8pdekez1x.cloudfront.net/fBn3r?evqvn" target="_blank">新世纪影视</a> | <a href="https://d2fq83y0z2h6n4.cloudfront.net/PUWMb?gppzgeyt" target="_blank">江峰时刻</a> | <a href="https://d8jw662akk94j.cloudfront.net/8?ymgjzkjwr" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309856.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2011/05/1105310454212320-320x200.jpg"><p align="center">逃离人间地狱 大陆80后见证中共暴行</p></a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309856.md#1" title="逃离人间地狱 大陆80后见证中共暴行""><img width="73" src="https://i.epochtimes.com/assets/uploads/2011/05/1105310454212320-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309817.md#1" title="中共发18卫星挑战星链 专家：存技术障碍""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309818-GettyImages-2158701398-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308822.md#1" title="新冠疫情突升温 专家析5大特点 解毒有良方""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14304695-8d6e2aa89a1dc1d3e754e4cc5b38f01f-320x200.png">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309638.md#1" title="第二季度外国投资撤离中国幅度创历史新高""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/06/id13750224-GettyImages-1240081293-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309661.md#1" title="中共国安手伸向留学申请书 专家批草木皆兵""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/01/id13904263-163321.jpg">&nbsp;</a>
@@ -11,18 +12,17 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308289.md#1" title="印度两校办班 逾千名师生学炼法轮功""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308352-2024-8-8-india-hongfa_07-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309231.md#1" title="组图：纽约航空展精彩瞬间 战机直冲云霄""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309376-LDB5679-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309449.md#1" title="财富全球500强排名 美国上榜企业超中国""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/04/584283190f4925118cb142a803e40083-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309492.md#1" title="北京官场异常现象频仍 党魁传闻愈演愈烈""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309507-11_GettyImages-21365859221-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309817.md#1">中共发18卫星挑战星链 专家：存在技术障碍</a><br>
-:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309728.md#1">马斯克今晚在X平台上采访川普</a><br>
-:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309836.md#1">高智晟失踪七年 重温中华联邦共和国宪法草案</a><br>
-:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308708.md#1">巴伐利亚小镇处处可见16世纪壁画 宛如故事书</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309834.md#1">硅谷工程师划皮艇海钓丧生 毕业于北京清华</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309727.md#1">万达酒店发展预期上半年净亏约9亿港元</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309779.md#1">麦当劳星巴克受冲击 美国消费出现分级？</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309666.md#1">富力地产附属公司无力支付1.47亿美元票据利息</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309766.md#1">杭州保安逼女骑手下跪 引发数百外卖员抗议</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308822.md#1">新冠疫情突升温 专家析5大特点 解毒有良方</a><br>
+:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309828.md#1">英国再爆持刀伤人案 伦敦两人被刺 嫌犯被捕</a><br>
+:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309753.md#1">【新闻大家谈】惊天案：央企卖尸体 党媒造反？</a><br>
+:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309833.md#1">美银CEO：研究团队不再预测经济衰退</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309817.md#1">中共发18卫星挑战星链 专家：存技术障碍</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309728.md#1">马斯克今晚在X平台上采访川普</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309836.md#1">高智晟失踪七年 重温中华联邦共和国宪法草案</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308708.md#1">巴伐利亚小镇处处可见16世纪壁画 宛如故事书</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309834.md#1">硅谷工程师划皮艇海钓丧生 毕业于北京清华</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309727.md#1">万达酒店发展预期上半年净亏约9亿港元</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309779.md#1">麦当劳星巴克受冲击 美国消费出现分级？</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308899.md#1">大陆多地取消楼市限价 或致房价断崖式下跌</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309017.md#1">地方债近100万亿 专家：中共不够钱付利息</a><br>
@@ -60,6 +60,8 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309229.md#1">河北省连续10名省管干部落马 均与唐山有关</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309184.md#1">消费下滑 深圳餐厅价格战 顾客：便宜是王道</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309225.md#1">周晓辉：中共驻外大使表态现异常 再证北京不平静</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309753.md#1">【新闻大家谈】惊天案：央企卖尸体 党媒造反？</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309492.md#1">北京官场异常现象频仍 党魁传闻愈演愈烈</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309441.md#1">“掼蛋”犹明末叶子戏 官媒互怼显末日征兆</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306658.md#1">陷冤狱11年 法轮功学员姚爱英再被劫关押</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308937.md#1">广西消防救援总队原党委书记案情细节披露</a><br>
@@ -106,15 +108,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306847.md#1">【新闻看点】唐山案内幕迭爆 陈志伟全网失联</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307024.md#1">中国养老基金告急 分析：延迟退休治标不治本</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305360.md#1">“被偷走的三年” 中国中产之家的润美心路</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306958.md#1">孟加拉总理出逃前刚访京 一带一路添变数</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306133.md#1">【新闻欣视角】中国富豪“润”更多 中共又失老朋友</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2tpagigsks9we.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d2tpagigsks9we.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 40,821</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://dcw8decjhnoa.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://dcw8decjhnoa.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://dcw8decjhnoa.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 40,821</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 434,361,904 人
+!共 434,362,216 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308612.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308612.md#1">揭买尸案律师指“更高层介入” 其安全受关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308455.md#1">【新闻欣视角】奥瑞只是冰山一角 央企涉案 黑幕惊人</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307754.md#1">揭盗卖尸体案 律师易胜华相关发文被删</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307581.md#1">来自中国农民的控诉：中共暴政 村霸治村</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307150.md#1">陈文清王小洪被列“恶人榜”递44国备制裁</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307082.md#1">新报告揭中共利用社媒造谣诋毁法轮功</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309727.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/02/bdccb8690bcf4a0eada0764558a6fd79-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309727.md#1">万达酒店发展预期上半年净亏约9亿港元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309666.md#1">富力地产附属公司无力支付1.47亿美元票据利息</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309695.md#1">A股成交额跌破5000亿 创2022年5月以来新低</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309373.md#1">资金不足 大陆部分经销商拖延提供汽车合格证</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309366.md#1">华尔街削减招聘 中国学生找金融工作难上加难</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309298.md#1">估值1.3亿厂房被法院1.8万元拍卖掉 引热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309836.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13001630-new_608241637121695-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309836.md#1">高智晟失踪七年 重温中华联邦共和国宪法草案</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309516.md#1">人大教授再发信吁中共退场 建联邦共和国</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308824.md#1">中共政法系统掀举报风 大批官员上网“鸣冤”</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308705.md#1">澳洲首次测试SM-6先进舰载防空导弹 剑指中共</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308692.md#1">菲律宾谴责中共军机在南海的危险骚扰行为</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308646.md#1">美学者：台应增军费至GDP5% 严肃看生存威胁</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309692.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309692.md#1">“南水北调”河南长垣段发生安全事故 致5死</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309634.md#1">中国疫情再度升温 专家回应引质疑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309509.md#1">江苏一凉亭坍塌致多人死伤 官方通报遭质疑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309167.md#1">广东中山市发生凶案 致3死1伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308926.md#1">7月中国各种灾害至少造成328人失踪死亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308638.md#1">具有600年历史 张家口明代古城墙局部坍塌</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309700.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309702-FireShot-Capture-006--320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309700.md#1">山东一地发生持弓箭伤人事件 细节曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309367.md#1">三退声明精选（2024/08/11）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308831.md#1">中国人花数千美元 从巴拿马VIP路径走线美国</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308687.md#1">武汉18岁青年失踪5天后 尸体被发现</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308630.md#1">传河南漯河郾城区法院一女法官遇害</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308516.md#1">三退声明精选（2024/08/09）</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306410.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/05/id13999070-GettyImages-1237394084-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306410.md#1">中共与西方“脱钩” 留欧学生遭夹击</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302373.md#1">新剧中挑战农妇角色 杨幂的造型引争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300362.md#1">巴黎奥运 中国女篮首战失利败给西班牙</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/28/n14299945.md#1">“北京中轴线”申遗成功 含毛纪念堂引争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/27/n14299901.md#1">为玩“烟卡游戏” 四川六童偷六万元高档香烟</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297646.md#1">陕师大教师给女生发不雅照？9年前被举报无果</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284768.md#1">前高官：中共恐怖治国假话盛行 官员难善终</a><br>
